# dox

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  README.md  tarpaulin.toml
.claude/agents/: ai-integrator.md  async-architect.md  build-master.md  cli-architect.md  doc-processor.md  doc-scribe.md  library-designer.md  macro-wizard.md  ownership-expert.md  rust-master.md  test-guardian.md  unsafe-specialist.md
.github/workflows/: release.yml  test.yml
benches/: replace_benchmark.rs
crates/dox-cli/: Cargo.toml
crates/dox-cli/src/: main.rs
crates/dox-cli/src/cli/: mod.rs
crates/dox-cli/src/cli/commands/: config.rs  create.rs  extract.rs  generate.rs  mod.rs  replace.rs  template.rs
crates/dox-cli/src/cli/commands/generate/: mod.rs
crates/dox-core/: Cargo.toml
crates/dox-core/src/: create.rs  lib.rs  logging.rs  replace.rs  spreadsheet.rs
crates/dox-core/src/error/: mod.rs  recovery.rs  tests.rs  types.rs
crates/dox-core/src/generate/: claude.rs  mod.rs  openai.rs
crates/dox-core/src/i18n/: messages.rs  mod.rs
crates/dox-core/src/templates/: blog_en.txt  blog_ko.txt  docs_en.txt  docs_ko.txt  email_en.txt  email_ko.txt  proposal_en.txt  proposal_ko.txt  report_en.txt  report_ko.txt
crates/dox-core/src/utils/: config.rs  mod.rs  ui.rs
crates/dox-document/: Cargo.toml  README.md  README_PDF_ENHANCEMENT.md
crates/dox-document/examples/: pdf_test.rs
crates/dox-document/src/: compat.rs  excel.rs  lib.rs  pdf.rs  powerpoint.rs  provider.rs  text.rs  utils.rs  word.rs
crates/dox-document/src/extract/: extractors.rs  mod.rs
crates/dox-document/src/markdown/: mod.rs
crates/dox-document/src/pdf/: encrypted.rs  extractor.rs  mod.rs  ocr.rs  provider.rs  tests.rs
crates/dox-document/src/replace/: mod.rs  replacer.rs  tests.rs
crates/dox-document/src/template/: mod.rs
crates/dox-document/tests/: integration_tests.rs
crates/dox-excel/: Cargo.toml  README.md
crates/dox-excel/src/: chart.rs  formatting.rs  formula.rs  lib.rs  macro_handling.rs  pivot.rs  streaming.rs  validation.rs
crates/dox-excel/src/tests/: integration.rs  mod.rs
crates/dox-gsheet/: Cargo.toml
crates/dox-gsheet/src/: lib.rs
docs/: ERROR_HANDLING.md  ISSUE_DRAFT_SPREADSHEET_COMMANDS.md  TESTING.md
scripts/: ci-local.sh
src/: error.rs  lib.rs  logging.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: config.rs  create.rs  extract.rs  generate.rs  mod.rs  replace.rs  template.rs
src/core/: mod.rs
src/core/document/: mod.rs  powerpoint.rs  word.rs
src/core/generate/: mod.rs
src/core/replace/: mod.rs  replacer.rs
src/core/template/: mod.rs
src/error/: mod.rs  tests.rs  types.rs
src/utils/: config.rs
tests/: integration_test.rs  property_tests.rs
tests/common/: mod.rs
