[package]
name = "dox"
version = "0.1.0"
edition = "2021"
authors = ["PyHub Korea <support@pyhub.kr>"]
description = "Document automation and AI-powered content generation CLI"
license = "MIT"
repository = "https://github.com/pyhub-apps/dox"
keywords = ["document", "automation", "cli", "office", "markdown"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# UI Components
indicatif = "0.17"
colored = "2.1"
termcolor = "1.4"
console = "0.15"
dialoguer = "0.11"
similar = "2.6"
prettytable-rs = "0.10"

# Document Processing
zip = "2.2"
quick-xml = "0.37"
calamine = "0.26"
rust_xlsxwriter = "0.78"
pulldown-cmark = "0.12"
pdf-extract = "0.7"

# HTTP Client (for AI APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# File System
walkdir = "2.5"
glob = "0.3"
notify = "6.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.5"
once_cell = "1.19"
dirs = "5.0"
which = "6.0"
rand = "0.8"

# Internationalization
fluent = "0.16"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
unic-langid = "0.9"

# Security
keyring = { version = "3.0", optional = true }
secrecy = "0.8"

# Testing & Development
tempfile = "3.10"
pretty_assertions = "1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockito = "1.4"
rstest = "0.22"
proptest = "1.5"
fake = "2.9"
assert_fs = "1.1"
predicates = "3.1"
serial_test = "3.1"
test-case = "3.1"
insta = "1.40"

[features]
default = ["keyring"]
no-keyring = []

[[bin]]
name = "dox"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2

