[package]
name = "dox-cli"
version = "1.2536.9"
edition = "2021"
authors = ["PyHub Korea <support@pyhub.kr>"]
description = "Document automation and AI-powered content generation CLI"
license = "MIT"
repository = "https://github.com/pyhub-apps/dox"
keywords = ["document", "automation", "cli", "office", "markdown"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
dox-core = { path = "../dox-core" }

# CLI Framework
clap = { version = "4.5", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# UI Components
indicatif = "0.17"
colored = "2.1"
termcolor = "1.4"
console = "0.15"
dialoguer = "0.11"
similar = "2.6"
prettytable-rs = "0.10"

# Document Processing
zip = "2.2"
quick-xml = "0.37"
calamine = "0.26"
rust_xlsxwriter = "0.78"
pulldown-cmark = "0.12"
pdf-extract = { version = "0.7", optional = true }

# HTTP Client (for AI APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# File System
walkdir = "2.5"
glob = "0.3"
notify = "6.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.5"
once_cell = "1.19"
dirs = "5.0"
which = "6.0"
rand = "0.8"

# Internationalization
fluent = "0.16"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
unic-langid = "0.9"

# Security
keyring = { version = "3.0", optional = true }
secrecy = "0.8"

# Optional providers (to be wired later)
dox-document = { path = "../dox-document" }
dox-excel = { path = "../dox-excel", optional = true }
dox-gsheet = { path = "../dox-gsheet", optional = true }

# Testing & Development
tempfile = "3.10"
pretty_assertions = "1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockito = "1.4"
rstest = "0.22"

[features]
default = ["keyring", "pdf"]
no-keyring = []
pdf = ["dep:pdf-extract", "dox-core/pdf"]
excel = ["dep:dox-excel"]
gsheet = ["dep:dox-gsheet"]

[[bin]]
name = "dox"
path = "src/main.rs"
