[package]
name = "dox-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pyhub-apps/dox"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tokio = { version = "1.40", features = ["full"] }
