[package]
name = "dox-core"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
repository = "https://github.com/pyhub-apps/dox"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
zip = "2.2"
quick-xml = "0.37"
calamine = "0.25"
rand = "0.8"
colored = "2.1"
indicatif = "0.17"
similar = "2.6"
dialoguer = "0.11"
prettytable-rs = "0.10"
dirs = "5.0"
once_cell = "1.19"

[features]
default = []
pdf = []
