[package]
name = "dox-document"
version = "0.1.0"
edition = "2021"
authors = ["PyHub Korea <me@pyhub.kr>"]
description = "Document processing crate for Word, PowerPoint, and PDF files"
license = "Proprietary"
repository = "https://github.com/pyhub-apps/dox"

[dependencies]
dox-core = { path = "../dox-core" }
zip = "2.2"
quick-xml = "0.37"
regex = "1.10"
anyhow = "1.0"
tracing = "0.1"
tempfile = "3.12"
thiserror = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
glob = "0.3"
pdf-extract = "0.9"
lopdf = "0.35"

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.22"