[package]
name = "dox-excel"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
repository = "https://github.com/pyhub-apps/dox"

[lib]
path = "src/lib.rs"

[dependencies]
dox-core = { path = "../dox-core" }
calamine = "0.26"
rust_xlsxwriter = "0.78"
anyhow = "1.0"
tracing = "0.1"
evalexpr = "11.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
memmap2 = "0.9"
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"
